make/config/kyverno/policy.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  annotations:
    policies.kyverno.io/category: Pod Security Standards
    policies.kyverno.io/description: Containers must have a read-only root filesystem
      to prevent unauthorized modifications. This policy ensures readOnlyRootFilesystem
      is set to true in the securityContext of all containers.
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Require Read-Only Root Filesystem
  name: require-ro-rootfs
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container, has(container.securityContext)
      && has(container.securityContext.readOnlyRootFilesystem) && container.securityContext.readOnlyRootFilesystem
      == true)
    message: Root filesystem must be read-only.
  variables:
  - expression: object.spec.containers + object.spec.?initContainers.orValue([]) +
      object.spec.?ephemeralContainers.orValue([])
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: Adding capabilities beyond those listed in the
      policy must be disallowed.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow Capabilities in ValidatingPolicy
  name: disallow-capabilities
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container,  container.?securityContext.?capabilities.?add.orValue([]).all(capability,
      capability == '' || capability in variables.allowedCapabilities))
    message: Any capabilities added beyond the allowed list (AUDIT_WRITE, CHOWN, DAC_OVERRIDE,
      FOWNER, FSETID, KILL, MKNOD, NET_BIND_SERVICE, SETFCAP, SETGID, SETPCAP, SETUID,
      SYS_CHROOT) are disallowed.
  variables:
  - expression: '[''AUDIT_WRITE'',''CHOWN'',''DAC_OVERRIDE'',''FOWNER'',''FSETID'',''KILL'',''MKNOD'',''NET_BIND_SERVICE'',''SETFCAP'',''SETGID'',''SETPCAP'',''SETUID'',''SYS_CHROOT'']'
    name: allowedCapabilities
  - expression: (object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([]))
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/description: Adding capabilities other than `NET_BIND_SERVICE`
      is disallowed. In addition, all containers must explicitly drop `ALL` capabilities.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow Capabilities (Strict) in ValidatingPolicy
  name: disallow-capabilities-strict
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container,  container.?securityContext.?capabilities.?drop.orValue([]).exists_one(capability,
      capability == 'ALL'))
    message: Containers must drop `ALL` capabilities.
  - expression: "variables.allContainers.all(container, \n  container.?securityContext.?capabilities.?add.orValue([]).size()
      == 0 || \n  (container.securityContext.capabilities.add.orValue([]).size() ==
      1 && \n  container.securityContext.capabilities.add[0] == 'NET_BIND_SERVICE'))"
    message: Any capabilities added other than NET_BIND_SERVICE are disallowed.
  variables:
  - expression: object.spec.containers +  (object.spec.?initContainers.orValue([]))
      +  (object.spec.?ephemeralContainers.orValue([]))
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: Host namespaces (Process ID namespace, Inter-Process
      Communication namespace, and network namespace) allow access to shared information
      and can be used to elevate privileges. Pods should not be allowed access to
      host namespaces. This policy ensures fields which make use of these host namespaces
      are unset or set to `false`.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow Host Namespaces in ValidatingPolicy
  name: disallow-host-namespaces
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: '!(variables.hostNetwork || variables.hostIPC || variables.hostPID)'
    message: 'Sharing the host namespaces is disallowed. The fields spec.hostNetwork,
      spec.hostIPC, and spec.hostPID must be unset or set to `false`.         '
  variables:
  - expression: object.spec.?hostNetwork.orValue(false)
    name: hostNetwork
  - expression: object.spec.?hostIPC.orValue(false)
    name: hostIPC
  - expression: object.spec.?hostPID.orValue(false)
    name: hostPID
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: HostPath volumes let Pods use host directories
      and volumes in containers. Using host resources can be used to access shared
      data or escalate privileges and should not be allowed. This policy ensures no
      hostPath volumes are in use.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod,Volume
    policies.kyverno.io/title: Disallow hostPath in ValidatingPolicy
  name: disallow-host-path
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: object.spec.?volumes.orValue([]).all(volume, !has(volume.hostPath))
    message: HostPath volumes are forbidden. The field spec.volumes[*].hostPath must
      be unset
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: 'Access to host ports allows potential snooping
      of network traffic and should not be allowed, or at minimum restricted to a
      known list. This policy ensures the `hostPort` field is unset or set to `0`. '
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow hostPorts in ValidatingPolicy
  name: disallow-host-ports
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: "variables.allContainers.all(container, \n  container.?ports.orValue([]).all(port,
      port.?hostPort.orValue(0) == 0))"
    message: Use of host ports is disallowed. The field spec.containers[*].ports[*].hostPort
      must either be unset or set to `0`.
  variables:
  - expression: "object.spec.containers + \n object.spec.?initContainers.orValue([])
      + \n object.spec.?ephemeralContainers.orValue([])"
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: Windows pods offer the ability to run HostProcess
      containers which enables privileged access to the Windows node. Privileged access
      to the host is disallowed in the baseline policy. HostProcess pods are an alpha
      feature as of Kubernetes v1.22. This policy ensures the `hostProcess` field,
      if present, is set to `false`.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow hostProcess in ValidatingPolicy
  name: disallow-host-process
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container, container.?securityContext.?windowsOptions.?hostProcess.orValue(false)
      == false)
    message: 'HostProcess containers are disallowed. The field spec.containers[*].securityContext.windowsOptions.hostProcess,
      spec.initContainers[*].securityContext.windowsOptions.hostProcess, and spec.ephemeralContainers[*].securityContext.windowsOptions.hostProcess
      must either be undefined or set to `false`. '
  variables:
  - expression: "object.spec.containers + \n  object.spec.?initContainers.orValue([])
      + \n  object.spec.?ephemeralContainers.orValue([])"
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/description: Privilege escalation, such as via set-user-ID
      or set-group-ID file mode, should not be allowed. This policy ensures the `allowPrivilegeEscalation`
      field is set to `false`.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow Privilege Escalation in ValidatingPolicy
  name: disallow-privilege-escalation
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container,  container.?securityContext.allowPrivilegeEscalation.orValue(true)
      == false)
    message: Privilege escalation is disallowed.  All containers must set the securityContext.allowPrivilegeEscalation
      field to `false`.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: Privileged mode disables most security mechanisms
      and must not be allowed. This policy ensures Pods do not call for privileged
      mode.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow Privileged Containers in ValidatingPolicy
  name: disallow-privileged-containers
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container, container.?securityContext.?privileged.orValue(false)
      == false)
    message: Privileged mode is disallowed. All containers must set the securityContext.privileged
      field to `false` or unset the field.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: The default /proc masks are set up to reduce
      attack surface and should be required. This policy ensures nothing but the default
      procMount can be specified. Note that in order for users to deviate from the
      `Default` procMount requires setting a feature gate at the API server.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow procMount in ValidatingPolicy
  name: disallow-proc-mount
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: variables.allContainers.all(container, container.?securityContext.?procMount.orValue('Default')
      == 'Default')
    message: Changing the proc mount from the default is not allowed.
  variables:
  - expression: "object.spec.containers + \n  object.spec.?initContainers.orValue([])
      + \n  object.spec.?ephemeralContainers.orValue([])"
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: SELinux options can be used to escalate privileges
      and should not be allowed. This policy ensures that the `seLinuxOptions` field
      is undefined.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Disallow SELinux in ValidatingPolicy
  name: disallow-selinux
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: "variables.hasValidSELinuxType && variables.allContainerTypes.all(container,
      \n  container.?securityContext.?seLinuxOptions.?type.orValue('') == '' || \n
      \ variables.seLinuxTypes.exists(type, type == container.securityContext.seLinuxOptions.type))"
    message: Setting the SELinux type is restricted. The field securityContext.seLinuxOptions.type  must
      either be unset or set to one of the allowed values (container_t, container_init_t,
      or container_kvm_t).
  - expression: |-
      variables.hasValidSELinuxUserRole && variables.allContainerTypes.all(container,

        container.?securityContext.?seLinuxOptions.?user.orValue('') == '' &&
        container.?securityContext.?seLinuxOptions.?role.orValue('') == '')
    message: Setting the SELinux user or role is forbidden. The fields seLinuxOptions.user
      and seLinuxOptions.role must be unset.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: allContainerTypes
  - expression: '[''container_t'', ''container_init_t'', ''container_kvm_t'']'
    name: seLinuxTypes
  - expression: object.spec.?securityContext.?seLinuxOptions.?type.orValue('') ==
      '' ||  variables.seLinuxTypes.exists(type, type == object.spec.securityContext.seLinuxOptions.type)
    name: hasValidSELinuxType
  - expression: object.spec.?securityContext.?seLinuxOptions.?user.orValue('') ==
      '' && object.spec.?securityContext.?seLinuxOptions.?role.orValue('') == ''
    name: hasValidSELinuxUserRole
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/description: Containers must be required to run as non-root
      users. This policy ensures `runAsUser` is either unset or set to a number greater
      than zero.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Require Run As Non-Root User in ValidatingPolicy
  name: require-run-as-non-root-user
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: object.spec.?securityContext.?runAsUser.orValue(1) > 0
    message: Running as root is not allowed. The field spec.securityContext.runAsUser  must
      be unset or set to a number greater than zero.
  - expression: "variables.allContainers.all(container, \n  container.?securityContext.?runAsUser.orValue(1)
      > 0)"
    message: Running as root is not allowed. The field spec.containers[*].securityContext.runAsUser,  spec.initContainers[*].securityContext.runAsUser,
      and  spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
      set to a number greater than zero.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/description: Containers must be required to run as non-root.
      This policy ensures `runAsNonRoot` is set to true.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Require runAsNonRoot in ValidatingPolicy
  name: require-run-as-nonroot
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: |-
      (object.spec.?securityContext.?runAsNonRoot.orValue(false) == true

        && variables.ctnrs.all(c, c.?securityContext.?runAsNonRoot.orValue(true) == true))
        || variables.ctnrs.all(c, c.?securityContext.?runAsNonRoot.orValue(false) == true)
    message: Running as root is not allowed. Either spec.securityContext.runAsNonRoot  must
      be set to true, or all containers (spec.containers[*], spec.initContainers[*],  spec.ephemeralContainers[*])
      must have securityContext.runAsNonRoot set to true.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: ctnrs
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: "1.30"
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Security in vpol
    policies.kyverno.io/description: 'Kubernetes automatically mounts ServiceAccount
      credentials in each ServiceAccount. The ServiceAccount may be assigned roles
      allowing Pods to access API resources. Blocking this ability is an extension
      of the least privilege best practice and should be followed if Pods do not need
      to speak to the API server to function. This policy ensures that mounting of
      these ServiceAccount tokens is blocked.      '
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Secret,ServiceAccount
    policies.kyverno.io/title: Restrict Auto-Mount of Service Account Tokens in Service
      Account in ValidatingPolicy
  name: restrict-sa-automount-sa-token
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: object.spec.?automountServiceAccountToken.orValue(true) == false
    message: Pods must set automountServiceAccountToken to false.
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: The seccomp profile must not be explicitly set
      to Unconfined. This policy,  requiring Kubernetes v1.30 or later, ensures that
      seccomp is unset or  set to `RuntimeDefault` or `Localhost`.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Restrict Seccomp in ValidatingPolicy
  name: restrict-seccomp
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: "variables.hasValidSeccompProfile && variables.allContainers.all(container,
      \n  container.?securityContext.?seccompProfile.?type.orValue('Localhost') in
      variables.allowedProfileTypes)"
    message: Use of custom Seccomp profiles is disallowed. The field  `securityContext.seccompProfile.type`
      must be unset or set to `RuntimeDefault` or `Localhost`.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: allContainers
  - expression: '[''RuntimeDefault'', ''Localhost'']'
    name: allowedProfileTypes
  - expression: object.spec.?securityContext.?seccompProfile.?type.orValue('Localhost')
      in variables.allowedProfileTypes
    name: hasValidSeccompProfile
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/description: The seccomp profile in the Restricted group must
      not be explicitly set to Unconfined but additionally must also not allow an
      unset value. This policy,  requiring Kubernetes v1.30 or later, ensures that
      seccomp is  set to `RuntimeDefault` or `Localhost`. A known issue prevents a
      policy such as this using `anyPattern` from being persisted properly in Kubernetes
      1.23.0-1.23.2.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Restrict Seccomp (Strict) in ValidatingPolicy
  name: restrict-seccomp-strict
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: object.spec.?securityContext.?seccompProfile.?type.orValue('RuntimeDefault')
      in ['RuntimeDefault', 'Localhost'] && variables.allContainers.all(container,  container.?securityContext.?seccompProfile.?type.orValue('RuntimeDefault')
      in ['RuntimeDefault', 'Localhost'])
    message: seccompProfile.type must be either 'RuntimeDefault' or 'Localhost'.
  variables:
  - expression: object.spec.containers +  object.spec.?initContainers.orValue([])
      +  object.spec.?ephemeralContainers.orValue([])
    name: allContainers
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Baseline) in ValidatingPolicy
    policies.kyverno.io/description: Sysctls can disable security mechanisms or affect
      all containers on a host, and should be disallowed except for an allowed "safe"
      subset. A sysctl is considered safe if it is namespaced in the container or
      the Pod, and it is isolated from other Pods or processes on the same Node. This
      policy ensures that only those "safe" subsets can be specified in a Pod.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/title: Restrict sysctls in ValidatingPolicy
  name: restrict-sysctls
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: "object.spec.?securityContext.?sysctls.orValue([]).all(sysctl, \n
      \ sysctl.?name.orValue('') in variables.allowedSysctls)"
    message: Setting additional sysctls above the allowed type is disallowed. The
      field spec.securityContext.sysctls must be unset or not use any other names
      than kernel.shm_rmid_forced, net.ipv4.ip_local_port_range, net.ipv4.ip_unprivileged_port_start,
      net.ipv4.tcp_syncookies and net.ipv4.ping_group_range.
  variables:
  - expression: '[''kernel.shm_rmid_forced'',''net.ipv4.ip_local_port_range'',''net.ipv4.ip_unprivileged_port_start'',''net.ipv4.tcp_syncookies'',''net.ipv4.ping_group_range'']'
    name: allowedSysctls
---
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  annotations:
    kyverno.io/kubernetes-version: 1.30+
    kyverno.io/kyverno-version: 1.14.0
    policies.kyverno.io/category: Pod Security Standards (Restricted) in ValidatingPolicy
    policies.kyverno.io/description: In addition to restricting HostPath volumes,
      the restricted pod security profile limits usage of non-core volume types to
      those defined through PersistentVolumes. This policy blocks any other type of
      volume other than those in the allow list.
    policies.kyverno.io/minversion: 1.14.0
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod,Volume
    policies.kyverno.io/title: Restrict Volume Types in ValidatingPolicy
  name: restrict-volume-types
spec:
  evaluation:
    background:
      enabled: true
  matchConstraints:
    namespaceSelector:
      matchExpressions:
      - key: kubernetes.io/metadata.name
        operator: NotIn
        values:
        - bind
        - e2e-vault
        - e2e-vault-mtls
        - gateway-system
        - ingress-nginx
        - pebble
        - kgateway-system
        - sample-external-issuer-system
        - samplewebhook
    resourceRules:
    - apiGroups:
      - ""
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - pods
  validationActions:
  - Deny
  validations:
  - expression: '!has(object.spec.volumes) || object.spec.volumes.all(vol, has(vol.configMap)
      || has(vol.csi) || has(vol.downwardAPI) || has(vol.emptyDir) || has(vol.ephemeral)
      || has(vol.persistentVolumeClaim) || has(vol.projected) || has(vol.secret))'
    message: 'Only the following types of volumes may be used: configMap, csi, downwardAPI,
      emptyDir, ephemeral, persistentVolumeClaim, projected, and secret.'
